# cfb-analytics

./: .Renviron.example  .env.example  .gitignore  CLAUDE.md  GUIDE.md  PROJECT_PLAN.md  README.md  _quarto.yml  pyproject.toml  run.py
.claude/: settings.json
.claude/agents/: analysis-reviewer.md  dbt-model-reviewer.md  eval-reviewer.md  pipeline-reviewer.md
.claude/commands/: analysis-check.md  model-check.md  pipeline-check.md  train-gate.md
.claude/hooks/: guard_dbt.py  guard_de.py  guard_ds.py  guard_ml.py
analysis/R/: archetypes.R  cpoe.R  game_model_score.R  game_model_train.R  poisson.R  priors_model.R  recruiting.R  ryoe.R  shrinkage.R  stability.R  util_io.R
analysis/python/: archetypes.py  cpoe.py  game_model.py  market_edge.py  poisson.py  priors_model.py  recruiting.py  ryoe.py  shrinkage.py  stability.py
dashboard/: build_compare.py  build_learn.py  compare_template.html  dashboard.qmd  glossary_template.html  make_preview.R  models_template.html  prepare_dashboard_data.py
docs/: architecture.md  compare.html  glossary.html  index.html  models.html
docs/dashboard/: dashboard.html
docs/principles/: PRINCIPLES_analytics-engineering.md  PRINCIPLES_data-engineering-pipeline.md  PRINCIPLES_data-science-analysis.md  PRINCIPLES_ml-project.md
ingest/: ingest_cfbd.R  scrape_recruiting.R
scripts/: check.sh  install_r_packages.R
src/cfb_analytics/: __init__.py  config.py  db.py  export_gold.py  forecast.py  (+2 more)
tools/: dbt_mcp_server.py  de_mcp_server.py  ds_mcp_server.py  ml_mcp_server.py
transform/: .user.yml  dbt_project.yml  profiles.yml
(+29 files in other folders)
